Fix spacing issues

--- a/components/SportEntryActive.module.css
+++ b/components/SportEntryActive.module.css
@@ -24,7 +24,7 @@
 .earliest_games_titlebar {
   background-color: #000;
   padding: 8px 18px;
-  margin: 18px 0;
+  margin: 0 0 18px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
